# geocoding-in-gcp

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: ip_addresses.csv
src/geocode/: geocoder.py  main.py
src/utils/: error_handling.py
tests/geocode/: test_geocoder.py
